Finish Truck and add get empty trips
