# docs/swagger.yaml
@@ -742,7 +742,7 @@ paths:
           '404':
             $ref: './components/responses/errors/NotFound.yaml#/Resource'
           '200':
-            description: Driver Information
+            description: Trip Information
             content:
               application/json:
                 schema:
@@ -904,5 +904,335 @@ paths:
                 schema:
                   $ref: './components/schemas/trip.yaml#/schema'
 
+    /v1/trucks:
+      get:
+        parameters:
+          - $ref: './components/parameters/queries.yaml#/page'
+          - $ref: './components/parameters/queries.yaml#/perPage'
+          - $ref: './components/parameters/headers.yaml#/Authorization'
+        tags:
+          - Truck
+        summary: Get all Trucks
+        description: <b>Scopes:</b> admin, user
+        security:
+          - oAuth2:
+              - admin
+              - user
+        securityDefinitions:
+          - oAuth2:
+              - admin
+              - user
+        responses:
+          '500':
+            $ref: './components/responses/errors/InternalServerError.yaml#/InternalServerError'
+          '200':
+            description: All Trips
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    current_page:
+                      type: integer
+                      example: 1
+                      description: Current Page
+                    data:
+                      type: array
+                      items:
+                        $ref: './components/schemas/truck.yaml#/schema'
+                    first_page_url:
+                      type: string
+                      example: http://localhost:8080/v1/trucks?page=1
+                      description: URL First Page
+                    from:
+                      type: integer
+                      example: 11
+                      description: Number of First Register
+                    last_page:
+                      type: integer
+                      example: 3
+                      description: Number of Last Page
+                    last_page_url:
+                      type: string
+                      example: http://localhost:8080/v1/trucks?page=2
+                      description: URL Last Page
+                    next_page_url:
+                      type: string
+                      example: http://localhost:8080/v1/trucks?page=3
+                      description: URL Next Page
+                    path:
+                      type: string
+                      example: http://localhost:8080/v1/trucks
+                      description: URL
+                    per_page:
+                      type: integer
+                      example: 10
+                      description: Number itens per page
+                    prev_page_url:
+                      type: integer
+                      example: http://localhost:8080/v1/trucks?page=1
+                      description: URL Next Page
+                    to:
+                      type: integer
+                      example: 20
+                      description: Number last item of page
+                    total:
+                      type: integer
+                      example: 30
+                      description: Total number itens
+
+    /v1/trucks/deleted:
+      get:
+        parameters:
+          - $ref: './components/parameters/queries.yaml#/page'
+          - $ref: './components/parameters/queries.yaml#/perPage'
+          - $ref: './components/parameters/headers.yaml#/Authorization'
+        tags:
+          - Truck
+        summary: Get all Trucks Deleted
+        description: <b>Scopes:</b> admin
+        security:
+          - oAuth2:
+              - admin
+        securityDefinitions:
+          - oAuth2:
+              - admin
+        responses:
+          '500':
+            $ref: './components/responses/errors/InternalServerError.yaml#/InternalServerError'
+          '200':
+            description: All Trucks Deleted
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    current_page:
+                      type: integer
+                      example: 1
+                      description: Current Page
+                    data:
+                      type: array
+                      items:
+                        $ref: './components/schemas/truck.yaml#/schema'
+                    first_page_url:
+                      type: string
+                      example: http://localhost:8080/v1/trucks/deleted?page=1
+                      description: URL First Page
+                    from:
+                      type: integer
+                      example: 11
+                      description: Number of First Register
+                    last_page:
+                      type: integer
+                      example: 3
+                      description: Number of Last Page
+                    last_page_url:
+                      type: string
+                      example: http://localhost:8080/v1/trucks/deleted?page=2
+                      description: URL Last Page
+                    next_page_url:
+                      type: string
+                      example: http://localhost:8080/v1/trucks/deleted?page=3
+                      description: URL Next Page
+                    path:
+                      type: string
+                      example: http://localhost:8080/v1/trucks/deleted
+                      description: URL
+                    per_page:
+                      type: integer
+                      example: 10
+                      description: Number itens per page
+                    prev_page_url:
+                      type: integer
+                      example: http://localhost:8080/v1/trucks/deleted?page=1
+                      description: URL Next Page
+                    to:
+                      type: integer
+                      example: 20
+                      description: Number last item of page
+                    total:
+                      type: integer
+                      example: 30
+                      description: Total number itens
+
+    /v1/truck/deleted/{truck_id}:
+      get:
+        parameters:
+          - $ref: './components/parameters/headers.yaml#/Authorization'
+          - $ref: './components/parameters/path.yaml#/truckId'
+        tags:
+          - Truck
+        summary: Get Truck deleted information by ID
+        description: <b>Scopes:</b> admin
+        security:
+          - oAuth2:
+              - admin
+        securityDefinitions:
+          - oAuth2:
+              - admin
+        responses:
+          '500':
+            $ref: './components/responses/errors/InternalServerError.yaml#/InternalServerError'
+          '404':
+            $ref: './components/responses/errors/NotFound.yaml#/Resource'
+          '200':
+            description: Truck Information
+            content:
+              application/json:
+                schema:
+                  $ref: './components/schemas/truck.yaml#/schema'
+
+    /v1/truck/{truck_id}:
+      get:
+        parameters:
+          - $ref: './components/parameters/headers.yaml#/Authorization'
+          - $ref: './components/parameters/path.yaml#/truckId'
+        tags:
+          - Truck
+        summary: Get Truck information by ID
+        description: <b>Scopes:</b> admin, user
+        security:
+          - oAuth2:
+              - admin
+              - user
+        securityDefinitions:
+          - oAuth2:
+              - admin
+              - user
+        responses:
+          '500':
+            $ref: './components/responses/errors/InternalServerError.yaml#/InternalServerError'
+          '404':
+            $ref: './components/responses/errors/NotFound.yaml#/Resource'
+          '200':
+            description: Truck Information
+            content:
+              application/json:
+                schema:
+                  $ref: './components/schemas/truck.yaml#/schema'
+      patch:
+        parameters:
+          - $ref: './components/parameters/headers.yaml#/Authorization'
+          - $ref: './components/parameters/path.yaml#/truckId'
+        tags:
+          - Truck
+        summary: Update a Truck
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                $ref: './components/request/truck.yaml#/schema'
+        description: <b>Scopes:</b> admin, user </br> <b>All fields of body are optional</b>
+        security:
+          - oAuth2:
+              - admin
+              - user
+        securityDefinitions:
+          - oAuth2:
+              - admin
+              - user
+        responses:
+          '500':
+            $ref: './components/responses/errors/InternalServerError.yaml#/InternalServerError'
+          '404':
+            $ref: './components/responses/errors/NotFound.yaml#/Resource'
+          '200':
+            description: Truck Information
+            content:
+              application/json:
+                schema:
+                  $ref: './components/schemas/truck.yaml#/schema'
+
+      delete:
+        parameters:
+          - $ref: './components/parameters/headers.yaml#/Authorization'
+          - $ref: './components/parameters/path.yaml#/truckId'
+        tags:
+          - Truck
+        summary: Delete a Truck
+        description: <b>Scopes:</b> admin, user
+        security:
+          - oAuth2:
+              - admin
+              - user
+        securityDefinitions:
+          - oAuth2:
+              - admin
+              - user
+        responses:
+          '500':
+            $ref: './components/responses/errors/InternalServerError.yaml#/InternalServerError'
+          '404':
+            $ref: './components/responses/errors/NotFound.yaml#/Resource'
+          '204':
+            description: No Content
+
+
+    /v1/truck:
+      post:
+        parameters:
+          - $ref: './components/parameters/headers.yaml#/Authorization'
+        tags:
+          - Truck
+        summary: Create a Truck
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: './components/request/truck.yaml#/schema'
+                  - required:
+                      - name
+        description: <b>Scopes:</b> admin, user
+        security:
+          - oAuth2:
+              - admin
+              - user
+        securityDefinitions:
+          - oAuth2:
+              - admin
+              - user
+        responses:
+          '500':
+            $ref: './components/responses/errors/InternalServerError.yaml#/InternalServerError'
+          '404':
+            $ref: './components/responses/errors/NotFound.yaml#/Resource'
+          '200':
+            description: Truck Information
+            content:
+              application/json:
+                schema:
+                  $ref: './components/schemas/truck.yaml#/schema'
+
+
+    /v1/truck/recover/{truck_id}:
+      patch:
+        parameters:
+          - $ref: './components/parameters/headers.yaml#/Authorization'
+          - $ref: './components/parameters/path.yaml#/truck_id'
+        tags:
+          - Truck
+        summary: Recover a Truck
+        description: <b>Scopes:</b> admin
+        security:
+          - oAuth2:
+              - admin
+        securityDefinitions:
+          - oAuth2:
+              - admin
+        responses:
+          '500':
+            $ref: './components/responses/errors/InternalServerError.yaml#/InternalServerError'
+          '404':
+            $ref: './components/responses/errors/NotFound.yaml#/Resource'
+          '200':
+            description: Truck Information
+            content:
+              application/json:
+                schema:
+                  $ref: './components/schemas/truck.yaml#/schema'
 
 
